# rust-demo

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
crates/01-rcli/: Cargo.toml
crates/01-rcli/src/: main.rs
crates/02-concurrency/: Cargo.toml
crates/02-concurrency/examples/: matrix.rs  mpsc.rs  redis_mock.rs
crates/02-concurrency/src/: lib.rs  matrix.rs  vector.rs
crates/03-eth-mempool-crawler/: Cargo.toml  README.md  config.toml.example  test.sh
crates/03-eth-mempool-crawler/examples/: mempool_flow.rs  task_architecture.rs
crates/03-eth-mempool-crawler/migrations/: 20250901104521_create_transactions_table.sql  20250903080030_add_is_private_column.sql
crates/03-eth-mempool-crawler/reference/: README.md  analysis.rs  api.rs  config.rs  db.rs  network.rs  oracle.rs  runner.rs  types.rs  ui.rs
crates/03-eth-mempool-crawler/src/: analysis.rs  lib.rs  main.rs  pipeline.rs  types.rs
crates/anyhow/: Cargo.toml
crates/anyhow/src/: main.rs
crates/arena-allocators/: Cargo.toml
crates/arena-allocators/src/: basics.rs  hft.rs  main.rs  pitfalls.rs  strategies.rs  web3.rs
crates/async-runtime/: Cargo.toml
crates/async-runtime/src/: cancel_backpressure.rs  exam.rs  executor_and_blocking.rs  graceful_shutdown.rs  main.rs  pin_and_future.rs  structured_concurrency.rs
crates/borrowing/: Cargo.toml
crates/borrowing/src/: main.rs
crates/cancellation/: Cargo.toml
crates/channels/: Cargo.toml
crates/channels/src/: main.rs  (+9 more)
crates/closures/: Cargo.toml
crates/copy-vs-clone/: Cargo.toml
crates/custom-allocators/: Cargo.toml
crates/data-structures/: Cargo.toml
crates/error-propagation/: Cargo.toml
crates/ffi/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/ffi/c/: .gitignore  build_shared.sh  vendor_ticks.c
crates/ffi/python/: ffi_rust_demo.py  vendor_ticks_demo.py
crates/ffi/src/: hft.rs  lib.rs  main.rs  pitfalls.rs  py_bind.rs  strategies.rs  web3.rs
crates/file-io/: Cargo.toml  README.md
crates/generics/: Cargo.toml
crates/guards-ranges/: Cargo.toml
crates/inline-caching/: Cargo.toml
crates/interior-mutability/: Cargo.toml
crates/iterators/: Cargo.toml
crates/lifetimes/: Cargo.toml
crates/lock-free-orderbook/: Cargo.toml
crates/macros/: Cargo.toml
crates/merkle-patricia/: Cargo.toml
crates/mev-simulator/: Cargo.toml
crates/mev-simulator/src/: main.rs
crates/mutex-locks/: Cargo.toml
crates/networking/: Cargo.toml  README.md
crates/ownership/: Cargo.toml  README.md
crates/parsing/: Cargo.toml  README.md
crates/pattern-matching/: Cargo.toml
crates/profile-optimization/: Cargo.toml  README.md
crates/reference-cycles/: Cargo.toml
crates/result-option/: Cargo.toml
crates/simd/: Cargo.toml  README.md
crates/smart-pointers/: Cargo.toml
crates/stack-vs-heap/: Cargo.toml  README.md
crates/thiserror/: Cargo.toml
crates/threads/: Cargo.toml
crates/trait-system/: Cargo.toml
crates/type-coercion/: Cargo.toml
crates/unsafe-rust/: Cargo.toml
crates/zero-copy-parser/: Cargo.toml
crates/zero-cost/: Cargo.toml  README.md
(+135 files in other folders)
