[package]
name = "mev-simulator"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"

# Web3 相关
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"
